createBookList function implemented

--- a/2-Browsers/Week1/homework/ex1-bookList/style.css
+++ b/2-Browsers/Week1/homework/ex1-bookList/style.css
@@ -1,1 +1,24 @@
 /* Write your style here */
+ul {
+  display: flex;
+  justify-content: start;
+}
+
+li {
+  list-style: none;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: fit-content;
+  margin-right: 20px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.content {
+  padding: 2px 16px;
+}
